--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -4,3 +4,17 @@ height: 100%;
 margin: 0;
 padding: 0;
 }
+/* element里的标签可以作为类选择器 */
+.el-breadcrumb {
+    margin-bottom: 15px;
+    font-size: 15px;
+}
+.el-card {
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.5) !important;
+}
+.el-table {
+    margin-top: 15px;
+}
+.el-pagination {
+    margin-top: 15px;
+}
